<?xml version="1.0" encoding="utf-8"?>

<!--	
 	PureMVC Java Currency Converter for Android
	Copyright (C) 2010  Frederic Saunier - www.tekool.net
	This program is free software: you can redistribute it and/or modify
	it under the terms of the GNU General Public License as published by
	the Free Software Foundation, either version 3 of the License, or
	(at your option) any later version.
	
	This program is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU General Public License for more details.
	
	You should have received a copy of the GNU General Public License
	along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item
    	android:id="@+id/OptionsMenuRefreshItem"
		android:title="@string/options_menu_refresh_item"
	/>

	<item
		android:id="@+id/OptionsMenuAboutItem"
		android:title="@string/options_menu_about_item"
	/>

    <item
		android:id="@+id/OptionsMenuPreferencesItem"
		android:title="@string/options_menu_preferences_item"
	/>

</menu>
